[tool.poetry]
name = "hiking"
version = "0.1.0"
description = "hiking stats"
authors = ["Fabio Ambauen <fabio@dnmx.ch>"]
readme = "README.md"
license = "MIT"
packages = [{include = "hiking"}]

[tool.poetry.dependencies]
python = "^3.11"
gpxpy = "^1.5.0"
SQLAlchemy = "^2.0.15"
plotille = "^5.0.0"
rich = "^13.3.5"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
flake8-bugbear = "^23.5.9"
flake8-debugger = "^4.1.2"
flake8-isort = "^6.0.0"
flake8-string-format = "^0.3.0"
flake8-tuple = "^0.4.1"
ipython = "^8.13.2"
isort = "^5.12.0"
pdbpp = "^0.10.3"
pytest = "^7.3.1"
factory-boy = "^3.2.1"
pytest-factoryboy = "^2.5.1"
pytest-env = "^0.8.1"
syrupy = "^4.0.2"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
pre-commit = "^3.3.2"
gitlint = "^0.19.1"
pytest-randomly = "^3.12.0"

[tool.isort]
known_first_party = ["hiking"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
line_length = 88

[tool.pytest.ini_options]
addopts = "-vv --randomly-seed=2715570422 --randomly-dont-reorganize"
env = [
    "HIKING_TEST=true",
]

[tool.coverage.run]
source = ["."]

[tool.coverage.report]
fail_under = 100
exclude_lines = [
    "pragma: no cover",
    "pragma: todo cover",
    "def __str__",
    "def __unicode__",
    "def __repr__",
]
show_missing = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
