[tool.poetry]
name = "hiking"
version = "0.1.0"
description = "hiking stats"
authors = ["Fabio Ambauen <fabio@dnmx.ch>"]
readme = "README.md"
license = "MIT"
packages = [{include = "hiking"}]

[tool.poetry.dependencies]
python = "^3.13"
gpxpy = "^1.6.2"
sqlalchemy = "^2.0.40"
plotille = "^5.0.0"
rich = "^14.0.0"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.0.0"
flake8-bugbear = "^24.2.6"
flake8-debugger = "^4.1.2"
flake8-isort = "^6.1.1"
flake8-string-format = "^0.3.0"
flake8-tuple = "^0.4.1"
ipython = "^9.0.2"
isort = "^5.13.2"
pdbpp = "^0.10.3"
pytest = "^8.3.5"
factory-boy = "^3.3.3"
pytest-factoryboy = "^2.7.0"
pytest-env = "^1.1.5"
syrupy = "^4.9.1"
pytest-cov = "^6.1.1"
pytest-mock = "^3.14.0"
pre-commit = "^4.2.0"
gitlint = "^0.19.1"
pytest-randomly = "^3.16.0"

[tool.isort]
known_first_party = ["hiking"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
line_length = 88

[tool.pytest.ini_options]
addopts = "-vv --randomly-seed=2715570422 --randomly-dont-reorganize"
env = [
    "HIKING_TEST=true",
]

[tool.coverage.run]
source = ["."]

[tool.coverage.report]
fail_under = 100
exclude_lines = [
    "pragma: no cover",
    "pragma: todo cover",
    "def __str__",
    "def __unicode__",
    "def __repr__",
]
show_missing = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
